# u2-net-infer

./: .gitignore  CMakeLists.txt  README.md  main.cpp  py_test.py
src/: common.cpp  common.h  salient_detector.cpp  salient_detector.h  sd_utils.cpp  sd_utils.h
test_so/: CMakeLists.txt  main.cpp
